<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Battery Fix</string>
	<string name="novalue">-</string>
	<string name="autoFix">Auto-fix when power detected</string>
	<string name="notifications">Show notifications</string>
	<string name="autoAction">Auto-action when done charging</string>
	<string name="autoActionReboot">Reboot the system</string>
	<string name="autoActionRestart">Restart the battd service</string>
	<string name="force">Run the fix</string>
	<string name="fix">Fix battd</string>
	<string name="charging_on">Charging enabled</string>
	<string name="charging_off">Charging disabled</string>
	<string name="nocharging">Charging control unavailable</string>
	<string name="msg_fix">Starting battery fix</string>
	<string name="msg_autofix">Power detected, starting battery fix</string>
	<string name="msg_start">Battery monitoring started</string>
	<string name="msg_stop">Battery monitoring stopped</string>
	<string name="msg_running">Battery monitoring active</string>
	<string name="msg_running_"></string>
	<string name="msg_done">Battery fix done!</string>
	<string name="msg_done_reminder">Battery fix done!\nRemember to reboot for changes to take effect.</string>
	<string name="msg_done_action"><![CDATA[
		<b>Battery fix done.</b><br />
		<br />
		You need to either <b>reboot</b> your device or <b>restart</b> the battd service for changes to take effect.
	]]></string>
	<string name="msg_fixed_action"><![CDATA[
		<b>Battd service fix done.</b><br />
		<br />
		You need to either <b>reboot</b> your device or <b>restart</b> the battd service for changes to take effect.
	]]></string>
	<string name="msg_rebooting">Rebooting…</string>
	<string name="msg_restarting">Restarting battd…</string>
	<string name="msg_fixing">Starting battd fix</string>
	<string name="msg_autoreboot">Performing auto-reboot…</string>
	<string name="msg_fixed">Battd fixed.</string>
	<string name="msg_usb_disabled">USB detected, disabling charging</string>
	<string name="msg_usb_enabled">Enabling charging</string>
	<string name="dialog_reboot">Reboot</string>
	<string name="dialog_restart">Restart</string>
	<string name="dialog_cancel">Cancel</string>
	<string name="msg_restart_done">Battd restart done.</string>
	<string name="err_fix">Error running battery fix!\n(%s)</string>
	<string name="err_fix_short">Error running battery fix</string>
	<string name="err_battd">Error fixing battd!\n(%s)</string>
	<string name="err_battd_short">Error fixing battd</string>
	<string name="err_reboot">Error rebooting device!\n(%s)</string>
	<string name="err_reboot_short">Error rebooting device</string>
	<string name="err_autoreboot">Error performing auto-reboot!</string>
	<string name="err_start">Cannot start monitoring service!\n(%s)</string>
	<string name="err_stop">Cannot stop monitoring service!\n(%s)</string>
	<string name="err_shell">system shell not found</string>
	<string name="err_restart">Error restarting battd!\n(%s)</string>
	<string name="err_restart_short">Error restarting battd</string>
	<string name="err_charging">Error configuring charging!\n(%s)</string>
	<string name="err_su">Error getting superuser auth!\n(%s)</string>
	<string name="mon_title">System monitor</string>
	<string name="batt_source">Power source</string>
	<string name="batt_source_battery">Battery</string>
	<string name="batt_source_ac">AC</string>
	<string name="batt_source_usb">USB</string>
	<string name="batt_source_unknown">Unknown</string>
	<string name="batt_health">Health</string>
	<string name="batt_state">State</string>
	<string name="batt_state_charging">Charging</string>
	<string name="batt_state_discharging">Discharging</string>
	<string name="batt_state_unknown">Unknown</string>
	<string name="batt_state_full">Full</string>
	<string name="batt_voltage">Voltage</string>
	<string name="batt_temp">Temperature</string>
	<string name="batt_actual">Actual percentage</string>
	<string name="batt_shown">Percentage shown</string>
	<string name="uptime">System uptime</string>
	<string name="menu_licence">Licence</string>
	<string name="menu_about">About</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_exit">Exit</string>
	<string name="prefs_title">Settings</string>
	<string name="pref_section_autoactions">Automatic actions</string>
	<string name="pref_autofix">Fix when power detected</string>
	<string name="pref_autofix_">Automatically run the fix when power detected</string>
	<string name="pref_autoaction">Action when charged</string>
	<string name="pref_autoaction_none">Do nothing</string>
	<string name="pref_autoaction_reboot">Reboot the device</string>
	<string name="pref_autoaction_restart">Restart battd service</string>
	<string name="pref_non100"><![CDATA[Only if less than 100%]]></string>
	<string name="pref_non100_"><![CDATA[Do the action only if battery is not at 100% when done charging]]></string>
	<string name="pref_section_general">General</string>
	<string name="pref_notifications">Show notifications</string>
	<string name="pref_battstats">Force calibration on fix</string>
	<string name="pref_battstats_">Delete batterystats.bin when fixing</string>
	<string name="pref_nousbcharging">Disable USB charging</string>
	<string name="pref_nousbcharging_">Attempt to disable charging on USB</string>
	<string name="no_show_about">Don\'t show at startup</string>
	<string name="text_about"><![CDATA[
		<big><b>Atrix Battery Fix</b></big><br />
		version %s<br />
		Copyright &copy; by <a href="http://forum.xda-developers.com/member.php?u=2315905">ravilov</a> &lt;<a href="mailto:ravilov@linux.hr?subject=AtrixBatteryFix">ravilov@linux.hr</a>&gt;
		<p>
		This app helps fix the common &quot;<i>battery won\'t charge beyond xx%%</i>&quot; bug that seems to affect most Motorola Atrix phones.
		It also attempts to fix ownership and permissions of the "battd" daemon and its data and config files.
		Optionally, it can also delete the <tt>batterystats.bin</tt> file, thus forcing battery recalibration.
		In addition, it can enable/disable charging (on compatible kernels), and also be set up to automatically disable charging when an USB connection is detected.<br />
		See <a href="http://forum.xda-developers.com/showthread.php?t=1832470">http://forum.xda-developers.com/showthread.php?t=1832470</a> for more info.
		</p>
		<p>
		<b><font color="#FFFF00">If you find this app useful, feel free to <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=ravilov@gmail.com&amp;item_name=AtrixBatteryFix+-+Donation&amp;no_shipping=1">make a donation</a>.</font></b><br />
		(If the link above doesn\'t work or PayPal reports an error, you can send your donation manually via PayPal to <a href="mailto:ravilov@gmail.com">ravilov@gmail.com</a>.)
		</p>
		<p>
		Thanks to <a href="http://forum.xda-developers.com/member.php?u=1555295">xploited</a> for the <a href="http://forum.xda-developers.com/showpost.php?p=16240746&postcount=1">&quot;battery pull&quot; fix</a>,
		to <a href="http://forum.xda-developers.com/member.php?u=2981495">bimasakti85</a> for the <a href="http://forum.xda-developers.com/showpost.php?p=29983401&amp;postcount=319">battd fix</a>,
		and to countless <a href="http://forum.xda-developers.com/">XDA</a> members for testing, commenting and contributing.
		</p>
		<p>Full source code is available on <a href="https://github.com/ravilov/AtrixBatteryFix">github</a>. See the included licence for details. </p>
	]]></string>
	<string name="text_licence"><![CDATA[
		<big><b>Atrix Battery Fix</b></big><br />
		version %s<br />
		Copyright &copy; by <a href="http://forum.xda-developers.com/member.php?u=2315905">ravilov</a>
		<p>This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. </p>
		<p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details. </p>
		<p>You should have received a copy of the GNU General Public License along with this program. If not, see <a href="http://www.gnu.org/licenses/gpl.txt">http://www.gnu.org/licenses/gpl.txt</a>. </p>
	]]></string>
</resources>
